--- a/Tutorial/CMakeLists.txt
+++ b/Tutorial/CMakeLists.txt
@@ -9,6 +9,9 @@ include(${Geant4_USE_FILE})
 
 file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
 
+file(GLOB MACRO_FILES "macros/*.mac")
+file(COPY ${MACRO_FILES} DESTINATION ${CMAKE_BINARY_DIR}/)
+
 # Create the executable
 add_executable(sim sim.cc ${sources})
 
@@ -17,3 +20,6 @@ target_include_directories(sim PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 # Link against Geant4 libraries
 target_link_libraries(sim PUBLIC ${Geant4_LIBRARIES})
+
+# Optional: Remove custom target if not needed
+# add_custom_target(Tutorial DEPENDS sim)
